Fixed layout issues and updated support for phone-users.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 .bg {
-	height:			100%;
+	min-height:		100%;
 	background-position:	center;
 	background-repeat:	no-repeat;
 	background-size:	cover;
@@ -12,7 +12,7 @@ body, html {
 }
 
 .bg-1 {
-	background-image:	linear-gradient(to right, rgba(0,173,249,1), rgba(0,109,254,1));
+	background-image:	linear-gradient(to right, rgba(0,173,249,1), rgba(0,99,248,1));
 	color:			#efefef;
 }
 
@@ -63,29 +63,36 @@ body, html {
 .header-black {			color: #212121; }
 
 .header-content {
-	text-align:		center;
-	width:			85%;
 	position:		relative;
-	padding:		5%;
+	width:			85%;
+	min-height:		100%;
+
+	padding:		3%;
 	padding-top:		2%;
+	text-align:		center;
 }
 
-.pfp-small {
-	padding-top:		22%;
-	width:			90%;
+.about {
+	margin-left:		10%;
+	margin-right:		10%;
+	margin-top:		6%;
+	margin-bottom:		6%;
 }
 
-.pfp-suppliment {
+.pfp-image {
+	width:			100%;
+}
+
+.pfp-text {
+	padding-top:		8%;
 	color: 			#212121;
 	font-size:		12pt;
 	vertical-align:		middle;
-	padding-top:		20%;
 }
 
-.social {
-	padding-left:		20%;
-	padding-right:		20%;
-	padding-top:		10%;
+.social-links {
+	padding-top:		7%;
+	padding-bottom:		20%;
 }
 
 .skill-container {
@@ -93,6 +100,8 @@ body, html {
 	background-color:	#efefef;
 	border:			2px solid #d5d5d5;
 	border-radius:		3px;
+	padding-bottom:		5%;
+	box-shadow:		3px 3px 3px #0b508c;
 }
 
 .skill-title {
@@ -106,6 +115,10 @@ body, html {
 	text-align:		left;
 	padding-left:		2em;
 	color:			#0d5ea5;
+}
+
+.skill-panel {
+	padding-top:		2%;
 }
 
 hr {
@@ -127,18 +140,58 @@ table {
 	text-align:		left;
 }
 
+.table-panel {
+	border:			2px solid #c1c1c1;
+}
+
+.blue-shadow {
+	box-shadow:		3px 3px 3px #0b508c;
+}
+
 .table > thead > tr > th {
 	border-radius:		6px;
 }
 
+.table > tbody > tr > td {
+	padding-right:		20px;
+	padding-left:		20px;
+}
+
 .panel-default {
-	padding:		5%;
+	padding:		2%;
+}
+
+@keyframes nav-arrow-anim {
+	from {
+		top:		95%;
+	}
+
+	to {
+		top:		93%;
+	}
+}
+
+@keyframes nav-arrow-fade {
+	from {
+		opacity:	0;
+		filter:		alpha(opacity=0);
+	}
+
+	to {
+		opacity:	1;
+		filter:		alpha(opacity=100);
+	}
 }
 
 .arrow-down {
-	color:			white;
+	opacity:			0;
 
-	position:		fixed;
-	top:			95%;
-	left:			50%;
+	position:			absolute;
+	top:				95%;
+	left:				50%;
+
+	animation:			nav-arrow-anim 1s ease-in-out 1s infinite alternate-reverse, nav-arrow-fade 1s ease-out 1s 1 forwards;
 }
+
+.arrow-down-white 			{ color: white; }
+.arrow-down-blue 			{ color: #0d5ea5; }
